# researcher-agent-kube-environment

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.agent  LICENSE  README.md  install.sh
k8s/: local-bridge.yaml  manifests.yaml
shim/: researcher.py  shim.py
src/: alignment.rs  api.rs  cli.rs  config.rs  controller.rs  fact_graph.rs  ledger.rs  lib.rs  main.rs  shim.rs  shim_main.rs  state.rs  verify.rs
tests/: integration_test.rs
