[package]
name = "raket-controller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "controller"
path = "src/main.rs"

[[bin]]
name = "shim"
path = "src/shim_main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
kube = { version = "0.95", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.23", features = ["v1_30"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["tokio"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
anyhow = "1"
schemars = { version = "0.8", features = ["derive"] }
envy = "0.4"
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
tempfile = "3"
tower-http = { version = "0.5", features = ["trace"] }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
axum = { version = "0.7", features = ["tokio"] }

